added lastest project

--- a/index.html
+++ b/index.html
@@ -179,9 +179,34 @@
                 </a>
               </div> -->
             </div>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="thumbnail hover1">
+                  <a href="https://github.com/adambeck7/node-mysql-store" target="_blank">
+                    <img src="img/node_sql_store.png" class="image1" alt="terminal image" style="width:100%">
+                    <div class="left">
+                      <div class="text">This is a storefront built with MySQL and Node. You can order items as a customer or check, add and
+                        adjust inventory as a manager.</div>
+                    </div>
+                    <div class="caption image1">
+                      <!-- <p style="align-content: center;">Bike-Finder</p> -->
+                    </div>
+                    <span class="tech-item image1">
+                      <i class="devicon-mysql-plain-wordmark colored"></i>
+                      <i class="devicon-javascript-plain colored"></i>
+                      <i class="devicon-nodejs-plain-wordmark colored"></i>
+
+                      <!-- <img src="img/firebase.png" alt="firebase-icon"> -->
+                    </span>
+                  </a>
+                </div>
+                <a target="_blank" href="https://github.com/adambeck7/node-mysql-store" class="btn btn-block btn-social btn-github">
+                  <span class="fab fa-github"></span> View the source code on GitHub.
+                </a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
 
 
     </section>
@@ -234,7 +259,7 @@
       </div>
     </div>
 
-  </div>
+    </div>
 
 </body>
 
