added orderUp project

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </a>
               </div> -->
             </div>
-            <div class="row">
+            <div class="row" style="margin-top: 2em">
               <div class="col-md-4">
                 <div class="thumbnail hover1">
                   <a href="https://github.com/adambeck7/node-mysql-store" target="_blank">
@@ -201,6 +201,31 @@
                   </a>
                 </div>
                 <a target="_blank" href="https://github.com/adambeck7/node-mysql-store" class="btn btn-block btn-social btn-github">
+                  <span class="fab fa-github"></span> View the source code on GitHub.
+                </a>
+              </div>
+              <div class="col-md-4">
+                <div class="thumbnail hover1">
+                  <a href="https://pure-wave-41572.herokuapp.com/" target="_blank">
+                    <img src="img/projects/orderUp.png" class="image1" alt="orderUp image" style="width:100%">
+                    <div class="left">
+                      <div class="text">OrderUp uses MySQL, Node, Express, Handlebars and a homemade ORM to serve up and devour whatever you'd
+                        like (or send it back if you don't).</div>
+                    </div>
+                    <div class="caption image1">
+                      <!-- <p style="align-content: center;">Bike-Finder</p> -->
+                    </div>
+                    <span class="tech-item image1">
+                      <i class="devicon-mysql-plain-wordmark colored"></i>
+                      <i class="devicon-javascript-plain colored"></i>
+                      <i class="devicon-nodejs-plain-wordmark colored"></i>
+                      <i class="devicon-express-plain-wordmark colored"></i>
+
+                      <!-- <img src="img/firebase.png" alt="firebase-icon"> -->
+                    </span>
+                  </a>
+                </div>
+                <a target="_blank" href="https://github.com/adambeck7/OrderUp" class="btn btn-block btn-social btn-github">
                   <span class="fab fa-github"></span> View the source code on GitHub.
                 </a>
               </div>
