--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         .type('MongoDB')
         .pause(500)
         .break()
-        .type('React')
+        .type('Vue')
         .pause(500)
         .break()
         .type('Javascript')
